Attempt to relive the file

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -641,16 +641,18 @@
     "            links = wp.findAll('div', {'product__body'})\n",
     "            return [base_url + equity.find('a')['href'] for equity in links]\n",
     "        \n",
+Updated upstream
     "        next_page_text = wp.find('ul', class_=\"pagination justify-content-md-end\").findAll('li')[-1].text\n",
     "        next_page_link = wp.find('ul', class_=\"pagination justify-content-md-end\").find('a', rel = 'next')\n",
+
     "        \n",
-    "        if next_page_text == 'Další >':\n",
-    "            next_page_partial = wp.find('ul', class_=\"pagination justify-content-md-end\").findAll('li')[-1].find('a')['href']\n",
-    "            next_page_url = base_url + next_page_partial\n",
-    "            getLinks(next_page_url)\n",
-    "        # No more 'Next' pages, finish the script\n",
-    "        else:\n",
-    "            print('Done')\n",
+    "#         if next_page_text == 'Další >':\n",
+    "#             next_page_partial = wp.find('ul', class_=\"pagination justify-content-md-end\").findAll('li')[-1].find('a')['href']\n",
+    "#             next_page_url = base_url + next_page_partial\n",
+    "#             getLinks(next_page_url)\n",
+    "#         # No more 'Next' pages, finish the script\n",
+    "#         else:\n",
+    "#             print('Done')\n",
     "        \n",
     "            \n",
     "        "
