Added Rent database utilizing work for sale

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -452,7 +452,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "links_properties = [getLinks(li) for li in links_class]"
+    "links_properties = [getLinks(li) for li in links_class]\n",
+    "links_properties_unlist = list(itertools.chain(*links_properties))"
    ]
   },
   {
@@ -462,24 +463,6 @@
    "outputs": [],
    "source": [
     "links_properties_unlist = list(itertools.chain(*links_properties))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'https://www.bezrealitky.cz/nove-bydleni/vzorova-nemovitost/704-bohdalecke-kvarteto/25709-2-kk-56m2-s-velkou-lodzii-p-4#utm_source=bezrealitky.cz&utm_medium=odkaz&utm_campaign=detail_inzeratu'"
-     },
-     "metadata": {},
-     "execution_count": 307
-    }
-   ],
-   "source": [
-    "links_properties_unlist[600]"
    ]
   },
   {
@@ -532,6 +515,123 @@
    ],
    "source": [
     "df_complete_sale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "           lat        long          variable       value\n0   50.0825271  14.4562782         Internet:            \n1   50.0825271  14.4562782   Číslo inzerátu:      509005\n2   50.0825271  14.4562782        Dispozice:        1+kk\n3   50.0825271  14.4562782           Plocha:       33 m²\n4   50.0825271  14.4562782             Cena:   11.500 Kč\n5   50.0825271  14.4562782         Poplatky:    3.000 Kč\n6   50.0825271  14.4562782     Vratná kauce:   14.500 Kč\n7   50.0825271  14.4562782            Město:       Praha\n8   50.0825271  14.4562782     Městská část:      Žižkov\n9   50.0825271  14.4562782  Typ vlastnictví:      Osobní\n10  50.0825271  14.4562782       Typ budovy:       Cihla\n11  50.0825271  14.4562782       Vybavenost:    Částečně\n12  50.0825271  14.4562782          Podlaží:           2\n13  50.0825271  14.4562782           Balkón:          Ne\n14  50.0825271  14.4562782           Terasa:          Ne\n15  50.0825271  14.4562782            Výtah:          Ne\n16  50.0825271  14.4562782            Garáž:          Ne\n17  50.0825271  14.4562782   K dispozici od:  24.04.2020",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>lat</th>\n      <th>long</th>\n      <th>variable</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Internet:</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Číslo inzerátu:</td>\n      <td>509005</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Dispozice:</td>\n      <td>1+kk</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Plocha:</td>\n      <td>33 m²</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Cena:</td>\n      <td>11.500 Kč</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Poplatky:</td>\n      <td>3.000 Kč</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Vratná kauce:</td>\n      <td>14.500 Kč</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Město:</td>\n      <td>Praha</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Městská část:</td>\n      <td>Žižkov</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Typ vlastnictví:</td>\n      <td>Osobní</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Typ budovy:</td>\n      <td>Cihla</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Vybavenost:</td>\n      <td>Částečně</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Podlaží:</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Balkón:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Terasa:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Výtah:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>Garáž:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>50.0825271</td>\n      <td>14.4562782</td>\n      <td>K dispozici od:</td>\n      <td>24.04.2020</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 370
+    }
+   ],
+   "source": [
+    "HouseForSale('https://www.bezrealitky.cz/nemovitosti-byty-domy/509005-nabidka-pronajem-bytu-taboritska-praha-3').getDf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Loop is done\n"
+    }
+   ],
+   "source": [
+    "links_class_rent = Downloader_multi_byTiep('https://www.bezrealitky.cz/vypis/nabidka-pronajem/byt/praha').getAllPages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links_properties_rent = [getLinks(li) for li in links_class]\n",
+    "links_properties_rent_unlist = list(itertools.chain(*links_properties_rent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 381,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(461,)\n(161,)\n(622,)\n"
+    }
+   ],
+   "source": [
+    "links_properties_rent_unlist_old = [li for li in links_properties_rent_unlist if 'nove-bydleni' not in li]\n",
+    "links_properties_rent_unlist_new = [li for li in links_properties_rent_unlist if 'nove-bydleni' in li]\n",
+    "print(np.shape(links_properties_rent_unlist_old))\n",
+    "print(np.shape(links_properties_rent_unlist_new))\n",
+    "print(np.shape(links_properties_rent_unlist))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "          lat       long          variable         value\n0   50.103122  14.474974         Internet:              \n1   50.103122  14.474974   Číslo inzerátu:        604510\n2   50.103122  14.474974        Dispozice:          1+kk\n3   50.103122  14.474974           Plocha:         65 m²\n4   50.103122  14.474974             Cena:  5.100.000 Kč\n5   50.103122  14.474974            Město:         Praha\n6   50.103122  14.474974     Městská část:         Libeň\n7   50.103122  14.474974  Typ vlastnictví:        Osobní\n8   50.103122  14.474974       Typ budovy:         Cihla\n9   50.103122  14.474974             PENB:             E\n10  50.103122  14.474974          Podlaží:             5\n11  50.103122  14.474974           Balkón:           Ano\n12  50.103122  14.474974           Terasa:            Ne\n13  50.103122  14.474974            Výtah:           Ano\n14  50.103122  14.474974            Garáž:            Ne\n15  50.103122  14.474974   K dispozici od:    24.04.2020",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>lat</th>\n      <th>long</th>\n      <th>variable</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Internet:</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Číslo inzerátu:</td>\n      <td>604510</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Dispozice:</td>\n      <td>1+kk</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Plocha:</td>\n      <td>65 m²</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Cena:</td>\n      <td>5.100.000 Kč</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Město:</td>\n      <td>Praha</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Městská část:</td>\n      <td>Libeň</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Typ vlastnictví:</td>\n      <td>Osobní</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Typ budovy:</td>\n      <td>Cihla</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>PENB:</td>\n      <td>E</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Podlaží:</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Balkón:</td>\n      <td>Ano</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Terasa:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Výtah:</td>\n      <td>Ano</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>Garáž:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>50.103122</td>\n      <td>14.474974</td>\n      <td>K dispozici od:</td>\n      <td>24.04.2020</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 377
+    }
+   ],
+   "source": [
+    "HouseForSale(links_properties_rent_unlist[10]).getDf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'find'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-378-fd94c471f5a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf_complete_rent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mli\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlinks_properties_rent_unlist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mdf_unit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHouseForSale\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetDf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mdf_complete_sale\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_complete_rent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_unit\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-188-29dc5cf25dfc>\u001b[0m in \u001b[0;36mgetDf\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0mReturn\u001b[0m \u001b[0ma\u001b[0m \u001b[0mwide\u001b[0m \u001b[0mdataframe\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgetMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mgetParameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlatitute\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlongtitude\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         '''\n\u001b[0;32m---> 48\u001b[0;31m         \u001b[0mdf_par\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetParameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m         \u001b[0mdf_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_par\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_map\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-188-29dc5cf25dfc>\u001b[0m in \u001b[0;36mgetParameters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     19\u001b[0m         '''\n\u001b[1;32m     20\u001b[0m         \u001b[0mbf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mbf_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'div'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'data-element'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"detail-description\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'table'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mtable_extract\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbf_table\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mdf_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable_extract\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'find'"
+     ]
+    }
+   ],
+   "source": [
+    "df_complete_rent = pd.DataFrame()\n",
+    "for li in links_properties_rent_unlist_old:\n",
+    "    df_unit = HouseForSale(li).getDf()\n",
+    "    df_complete_sale = pd.concat([df_complete_rent, df_unit])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_complete_rent"
    ]
   },
   {
