Project_str created

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PythonDataIES project - bezrealitky.cz"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +123,7 @@
     "\n",
     "        return df\n",
     "    \n",
-    "     #Cannot really extract the locationdef getMap(self):\n",
+    "     def getMap(self)#Cannot really extract the locationdef getMap(self):\n",
     "        '''\n",
     "        Get location of the property using embeded google maps longtitute and lattitude parameters\n",
     "        '''\n",
@@ -437,9 +444,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Loop is done\n"
+     "output_type": "stream",
+     "text": [
+      "Loop is done\n"
+     ]
     }
    ],
    "source": [
@@ -479,9 +488,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(35,)\n(1,)\n(36,)\n"
+     "output_type": "stream",
+     "text": [
+      "(35,)\n",
+      "(1,)\n",
+      "(36,)\n"
+     ]
     }
    ],
    "source": [
@@ -510,12 +523,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "(649, 4)"
+      "text/plain": [
+       "(649, 4)"
+      ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "execution_count": 28
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -528,9 +543,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Loop is done\n"
+     "output_type": "stream",
+     "text": [
+      "Loop is done\n"
+     ]
     }
    ],
    "source": [
@@ -553,9 +570,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(230,)\n(1,)\n(231,)\n"
+     "output_type": "stream",
+     "text": [
+      "(230,)\n",
+      "(1,)\n",
+      "(231,)\n"
+     ]
     }
    ],
    "source": [
@@ -572,13 +593,188 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "          lat       long          variable       value\n0   50.084425  14.451608         Internet:            \n1   50.084425  14.451608   Číslo inzerátu:      601080\n2   50.084425  14.451608        Dispozice:         1+1\n3   50.084425  14.451608           Plocha:       33 m²\n4   50.084425  14.451608             Cena:   12.000 Kč\n5   50.084425  14.451608         Poplatky:    2.000 Kč\n6   50.084425  14.451608     Vratná kauce:   14.000 Kč\n7   50.084425  14.451608            Město:       Praha\n8   50.084425  14.451608     Městská část:      Žižkov\n9   50.084425  14.451608  Typ vlastnictví:      Osobní\n10  50.084425  14.451608       Typ budovy:       Cihla\n11  50.084425  14.451608             PENB:           B\n12  50.084425  14.451608          Podlaží:           4\n13  50.084425  14.451608           Balkón:          Ne\n14  50.084425  14.451608           Terasa:          Ne\n15  50.084425  14.451608            Výtah:          Ne\n16  50.084425  14.451608            Garáž:          Ne\n17  50.084425  14.451608   K dispozici od:  01.04.2020",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>lat</th>\n      <th>long</th>\n      <th>variable</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Internet:</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Číslo inzerátu:</td>\n      <td>601080</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Dispozice:</td>\n      <td>1+1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Plocha:</td>\n      <td>33 m²</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Cena:</td>\n      <td>12.000 Kč</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Poplatky:</td>\n      <td>2.000 Kč</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Vratná kauce:</td>\n      <td>14.000 Kč</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Město:</td>\n      <td>Praha</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Městská část:</td>\n      <td>Žižkov</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Typ vlastnictví:</td>\n      <td>Osobní</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Typ budovy:</td>\n      <td>Cihla</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>PENB:</td>\n      <td>B</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Podlaží:</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Balkón:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Terasa:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Výtah:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>Garáž:</td>\n      <td>Ne</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>50.084425</td>\n      <td>14.451608</td>\n      <td>K dispozici od:</td>\n      <td>01.04.2020</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Internet:</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Číslo inzerátu:</td>\n",
+       "      <td>601080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Dispozice:</td>\n",
+       "      <td>1+1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Plocha:</td>\n",
+       "      <td>33 m²</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Cena:</td>\n",
+       "      <td>12.000 Kč</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Poplatky:</td>\n",
+       "      <td>2.000 Kč</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Vratná kauce:</td>\n",
+       "      <td>14.000 Kč</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Město:</td>\n",
+       "      <td>Praha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Městská část:</td>\n",
+       "      <td>Žižkov</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Typ vlastnictví:</td>\n",
+       "      <td>Osobní</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Typ budovy:</td>\n",
+       "      <td>Cihla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>PENB:</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Podlaží:</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Balkón:</td>\n",
+       "      <td>Ne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Terasa:</td>\n",
+       "      <td>Ne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Výtah:</td>\n",
+       "      <td>Ne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>Garáž:</td>\n",
+       "      <td>Ne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>50.084425</td>\n",
+       "      <td>14.451608</td>\n",
+       "      <td>K dispozici od:</td>\n",
+       "      <td>01.04.2020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          lat       long          variable       value\n",
+       "0   50.084425  14.451608         Internet:            \n",
+       "1   50.084425  14.451608   Číslo inzerátu:      601080\n",
+       "2   50.084425  14.451608        Dispozice:         1+1\n",
+       "3   50.084425  14.451608           Plocha:       33 m²\n",
+       "4   50.084425  14.451608             Cena:   12.000 Kč\n",
+       "5   50.084425  14.451608         Poplatky:    2.000 Kč\n",
+       "6   50.084425  14.451608     Vratná kauce:   14.000 Kč\n",
+       "7   50.084425  14.451608            Město:       Praha\n",
+       "8   50.084425  14.451608     Městská část:      Žižkov\n",
+       "9   50.084425  14.451608  Typ vlastnictví:      Osobní\n",
+       "10  50.084425  14.451608       Typ budovy:       Cihla\n",
+       "11  50.084425  14.451608             PENB:           B\n",
+       "12  50.084425  14.451608          Podlaží:           4\n",
+       "13  50.084425  14.451608           Balkón:          Ne\n",
+       "14  50.084425  14.451608           Terasa:          Ne\n",
+       "15  50.084425  14.451608            Výtah:          Ne\n",
+       "16  50.084425  14.451608            Garáž:          Ne\n",
+       "17  50.084425  14.451608   K dispozici od:  01.04.2020"
+      ]
      },
+     "execution_count": 24,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -603,12 +799,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "(4521, 4)"
+      "text/plain": [
+       "(4521, 4)"
+      ]
      },
+     "execution_count": 27,
      "metadata": {},
-     "execution_count": 27
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -621,12 +819,24 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "(50.106458, 14.659418)     23\n(50.078784, 14.48633)      22\n(50.041711, 14.569642)     22\n(50.058553, 14.282639)     21\n(50.094149, 14.495124)     20\n(50.030721, 14.369716)     18\n(50.053638, 14.355187)     16\n(50.06744, 14.302724)      16\n(50.072871, 14.477979)     15\n(50.0585874, 14.377194)    15\ndtype: int64"
+      "text/plain": [
+       "(50.106458, 14.659418)     23\n",
+       "(50.078784, 14.48633)      22\n",
+       "(50.041711, 14.569642)     22\n",
+       "(50.058553, 14.282639)     21\n",
+       "(50.094149, 14.495124)     20\n",
+       "(50.030721, 14.369716)     18\n",
+       "(50.053638, 14.355187)     16\n",
+       "(50.06744, 14.302724)      16\n",
+       "(50.072871, 14.477979)     15\n",
+       "(50.0585874, 14.377194)    15\n",
+       "dtype: int64"
+      ]
      },
+     "execution_count": 223,
      "metadata": {},
-     "execution_count": 223
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -651,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
+   "version": "3.7.3"
   },
   "mimetype": "text/x-python",
   "name": "python",
